# portfolioManager

./: .gitignore  Makefile  README.md  pyproject.toml
ExchangeConnection/: deribit.py
sp_proto/: fed_messages.proto  portfolio_manager.proto
tests/: test_deribit_connection.py
