[tool.poetry]
name = "portfoliomanager"
version = "0.1.0"
description = ""
authors = ["stevenmaharaj"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
websockets = "^12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
grpcio-tools = "^1.65.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
